# lingo

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DESIGN.md  Dockerfile  FEATURE_COMPARISON.md  LICENSE  Makefile  PROGRESS.md  README.md  SECURITY.md  TODOS.md  admin-preview.html  alembic.ini  docker-compose.yml  pyproject.toml  zensical.toml
.github/: dependabot.yml  pull_request_template.md  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_api.yml  bug_mcp_server.yml  bug_slack_bot.yml  bug_web_ui.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  docs.yml  release.yml  zensical.yml
alembic/: env.py
alembic/versions/: 2277c37b0174_initial_schema.py  7498417a71ae_add_unique_index_on_users_slack_user_id.py  a1b2c3d4e5f6_add_is_disputed_to_terms.py  b2c3d4e5f6a7_add_audit_events.py  c3d4e5f6a7b8_add_definition_suggestions.py
docs/: architecture.md  changelog.md  contributing.md  index.md
docs/api/: reference.md
docs/deployment/: docker.md  production.md
docs/getting-started/: configuration.md  installation.md  quickstart.md
docs/usage/: cli.md  mcp.md  slack-bot.md  web-ui.md
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: admin.ts  auth.ts  features.ts  terms.ts
frontend/src/components/: AddTermModal.tsx  DevModeBanner.tsx  SearchBar.tsx  StatusBadge.tsx  StatusFilter.tsx  TermDetail.tsx  TermRow.tsx
frontend/src/hooks/: useAdmin.ts  useFeatures.ts  useTerms.ts
frontend/src/pages/: Admin.tsx  Login.tsx
frontend/src/test/: AddTermModal.test.tsx  SearchBar.test.tsx  StatusBadge.test.tsx  StatusFilter.test.tsx  TermDetail.test.tsx  TermRow.test.tsx  api.test.ts
frontend/src/types/: index.ts
src/lingo/: config.py  log.py  main.py
src/lingo/api/: deps.py  schemas.py
src/lingo/api/routes/: admin.py  auth.py  export.py  features.py  slack.py  terms.py  tokens.py  users.py
src/lingo/auth/: oidc.py  slack_oidc.py
src/lingo/cli/: main.py
src/lingo/db/: session.py
src/lingo/mcp/: app.py  auth.py
src/lingo/models/: __init__.py  audit_event.py  base.py  definition_suggestion.py  job.py  term.py  term_definition.py  term_history.py  term_relationship.py  token.py  user.py  vote.py
src/lingo/scheduler/: setup.py
src/lingo/scheduler/jobs/: discovery.py  staleness.py
src/lingo/services/: audit_service.py  profanity_service.py  term_service.py  vote_service.py
src/lingo/slack/: app.py  handlers.py  notifications.py
src/lingo/static/: index.html
src/lingo/static/assets/: index-B51tro7Z.js  index-BbFDEN1V.js  index-ByToYVcO.css  index-C2cRjZHh.css  index-C44oFLlH.js  index-CwTfBjDC.css  index-D5_WBTDf.js  index-DNZVok2X.css  index-DR2qq0w9.js  index-DhsRnXAQ.js  index-DsueW_pv.css
tests/: conftest.py
tests/integration/: conftest.py  test_terms.py
tests/unit/: conftest.py  test_api.py  test_api_phase1.py  test_audit.py  test_auth_phase2.py  test_auth_session.py  test_cli_phase6.py  test_cors.py  test_dev_auth.py  test_mcp_phase3.py  test_models.py  test_profanity_service.py  test_scheduler_phase5.py  test_slack_phase4.py  test_term_service.py  test_ui_phase7.py  test_vote_service.py
