[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lingo"
version = "0.5.1"
description = "Self-hosted company glossary — Slack, CLI, and AI agents"
requires-python = ">=3.12"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",

    # Database
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",

    # Auth
    "authlib>=1.3.0",
    "itsdangerous>=2.2.0",
    "httpx>=0.28.0",

    # Slack
    "slack-bolt>=1.21.0",
    "slack-sdk>=3.33.0",

    # MCP
    "fastmcp>=2.3.0",
    "mcp>=1.6.0",

    # CLI
    "typer>=0.15.0",
    "rich>=13.9.0",

    # Scheduler
    "apscheduler>=3.11.0",

    # Config
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",

    # Utilities
    "python-multipart>=0.0.20",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
]

[project.scripts]
lingo = "lingo.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/lingo"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
    "anyio>=4.7.0",
    "aiosqlite>=0.22.1",
    "asgi-lifespan>=2.1.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["src/lingo"]
omit = ["*/migrations/*"]
