[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lingo"
version = "0.7.2"
description = "Self-hosted company glossary — Slack, CLI, and AI agents"
requires-python = ">=3.12"
dependencies = [
    # Web framework
    "fastapi>=0.136.0,<1.0.0",
    "uvicorn[standard]>=0.44.0,<1.0.0",
    # Database
    "sqlalchemy[asyncio]>=2.0.49,<3.0.0",
    "asyncpg>=0.31.0,<1.0.0",
    "alembic>=1.18.4,<2.0.0",
    # Auth
    "authlib>=1.7.0,<2.0.0",
    "itsdangerous>=2.2.0,<3.0.0",
    "httpx>=0.28.1,<1.0.0",
    # Slack
    "slack-bolt>=1.28.0,<2.0.0",
    "slack-sdk>=3.41.0,<4.0.0",
    "aiohttp[speedups]>=3.11.0,<4.0.0",
    "aiodns>=4.0.0,<5.0.0",
    "brotli>=1.1.0,<2.0.0",
    # MCP
    "fastmcp>=3.2.4,<4.0.0",
    "mcp>=1.27.0,<2.0.0",
    # CLI
    "typer>=0.24.1,<1.0.0",
    "rich>=15.0.0,<16.0.0",
    # Scheduler
    "apscheduler>=3.11.2,<4.0.0",
    # Config
    "pydantic>=2.13.2,<3.0.0",
    "pydantic-settings>=2.13.1,<3.0.0",
    # Utilities
    "better-profanity>=0.7.0,<1.0.0",
    "python-multipart>=0.0.26,<1.0.0",
    "python-jose[cryptography]>=3.5.0,<4.0.0",
    "passlib[bcrypt]>=1.7.4,<2.0.0",
]

[project.scripts]
lingo = "lingo.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/lingo"]


[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["src/lingo"]
omit = ["*/migrations/*"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.lint.per-file-ignores]
"alembic/versions/*.py" = ["E501"]
"tests/**/*.py" = ["E501"]

[dependency-groups]
dev = [
    "zensical>=0.0.33",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "httpx>=0.28.1",
    "anyio>=4.13.0",
    "aiosqlite>=0.22.1",
    "asgi-lifespan>=2.1.0",
    "pip-audit>=2.10.0",
    "ruff>=0.15.11",
]
